--- a/angular/src/app/footer/footer.component.html
+++ b/angular/src/app/footer/footer.component.html
@@ -5,10 +5,10 @@
         
 <a href="https://github.com/TheRealMonte/therealmonte.github.io">
     <i class="fa-brands fa-github"></i> GitHub Repo</a>
-<a href="#">
+<!--<a href="#">
     <i class="fa-brands fa-mastodon"></i> Updates
-</a>
-<a href="#">
+</a>-->
+<a href="https://therealmonte.github.io/feed/feed.xml">
     <i class="fa-solid fa-square-rss"></i> RSS
 </a>
 </footer>
