--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -15,40 +15,40 @@
     <p>1972 users from 302 instances participated in the event.</p>
     <p>There were 642338 pixels placed on the canvas. Of those pixels, 408881 are the final pixels on the canvas, making the canvas 81.7762% covered at the end of the event. Here are the counts for each color pixel placed:</p>
     <div class="colors-wrapper">
-        <span class="white count">White: 55152</span>
-        <span class="count lightGrey">Light Grey: 20011</span>
-        <span class="count mediumGrey">Medium Grey: 13057</span>
-        <span class="count deepGrey">Deep Grey: 12730</span>
-        <span class="count darkGrey">Dark Grey: 12810</span>
-        <span class="count black">Black: 119468</span>
-        <span class="count darkChocolate">Dark Chocolate: 5388</span>
-        <span class="count chocolate">Chocolate: 8724</span>
-        <span class="count brown">Brown: 6996</span>
-        <span class="count peach">Peach: 4138</span>
-        <span class="count beige">Beige: 8040</span>
-        <span class="count pink">Pink: 23204</span>
-        <span class="count magenta">Magenta: 8536</span>
-        <span class="count mauve">Mauve: 6421</span>
-        <span class="count purple">Purple: 12185</span>
-        <span class="count darkPurple">Dark Purple: 10896</span>
-        <span class="count navy">Navy: 27663</span>
-        <span class="count blue">Blue: 34210</span>
-        <span class="count azure">Azure: 32045</span>
-        <span class="count aqua">Aqua: 28753</span>
-        <span class="count lightTeal">Light Teal: 5153</span>
-        <span class="count darkTeal">Dark Teal: 5216</span>
-        <span class="count forest">Forest: 5975</span>
-        <span class="count darkGreen">Dark Green: 12810</span>
-        <span class="count green">Green: 15535</span>
-        <span class="count lime">Lime: 4168</span>
-        <span class="count pastelYellow">Pastel Yellow: 12417</span>
-        <span class="count yellow">Yellow: 35911</span>
-        <span class="count orange">Orange: 12336</span>
-        <span class="count rust">Rust: 7950</span>
-        <span class="count maroon">Maroon: 4887</span>
-        <span class="count rose">Rose: 8750</span>
-        <span class="count red">Red: 54053</span>
-        <span class="count watermelon">Watermelon: 3711</span>
+        <span class="white count link" (click)="showColorIMG('white')">White: 55152</span>
+        <span class="count  link lightGrey" (click)="showColorIMG('light-grey')">Light Grey: 20011</span>
+        <span class="count  link mediumGrey" (click)="showColorIMG('medium-grey')">Medium Grey: 13057</span>
+        <span class="count  link deepGrey" (click)="showColorIMG('deep-grey')">Deep Grey: 12730</span>
+        <span class="count  link darkGrey" (click)="showColorIMG('dark-grey')">Dark Grey: 12810</span>
+        <span class="count  link black" (click)="showColorIMG('black')">Black: 119468</span>
+        <span class="count  link darkChocolate" (click)="showColorIMG('dark-chocolate')">Dark Chocolate: 5388</span>
+        <span class="count  link chocolate" (click)="showColorIMG('chocolate')">Chocolate: 8724</span>
+        <span class="count  link brown" (click)="showColorIMG('brown')">Brown: 6996</span>
+        <span class="count  link peach" (click)="showColorIMG('peach')">Peach: 4138</span>
+        <span class="count  link beige" (click)="showColorIMG('beige')">Beige: 8040</span>
+        <span class="count  link pink" (click)="showColorIMG('pink')">Pink: 23204</span>
+        <span class="count  link magenta" (click)="showColorIMG('magenta')">Magenta: 8536</span>
+        <span class="count  link mauve" (click)="showColorIMG('mauve')">Mauve: 6421</span>
+        <span class="count  link purple" (click)="showColorIMG('purple')">Purple: 12185</span>
+        <span class="count  link darkPurple" (click)="showColorIMG('dark-purple')">Dark Purple: 10896</span>
+        <span class="count  link navy" (click)="showColorIMG('navy')">Navy: 27663</span>
+        <span class="count  link blue" (click)="showColorIMG('blue')">Blue: 34210</span>
+        <span class="count  link azure" (click)="showColorIMG('azure')">Azure: 32045</span>
+        <span class="count  link aqua" (click)="showColorIMG('aqua')">Aqua: 28753</span>
+        <span class="count  link lightTeal" (click)="showColorIMG('light-teal')">Light Teal: 5153</span>
+        <span class="count  link darkTeal" (click)="showColorIMG('dark-teal')">Dark Teal: 5216</span>
+        <span class="count  link forest" (click)="showColorIMG('forest')">Forest: 5975</span>
+        <span class="count  link darkGreen" (click)="showColorIMG('dark-green')">Dark Green: 12810</span>
+        <span class="count  link green" (click)="showColorIMG('green')">Green: 15535</span>
+        <span class="count  link lime" (click)="showColorIMG('lime')">Lime: 4168</span>
+        <span class="count  link pastelYellow" (click)="showColorIMG('pastel-yellow')">Pastel Yellow: 12417</span>
+        <span class="count  link yellow" (click)="showColorIMG('yellow')">Yellow: 35911</span>
+        <span class="count  link orange" (click)="showColorIMG('orange')">Orange: 12336</span>
+        <span class="count  link rust" (click)="showColorIMG('rust')">Rust: 7950</span>
+        <span class="count  link maroon" (click)="showColorIMG('maroon')">Maroon: 4887</span>
+        <span class="count  link rose" (click)="showColorIMG('rose')">Rose: 8750</span>
+        <span class="count  link red" (click)="showColorIMG('red')">Red: 54053</span>
+        <span class="count  link watermelon" (click)="showColorIMG('watermelon')">Watermelon: 3711</span>
     </div>
     <p>The coordinate with the most pixels placed on was (10,262) with 1427 placed. The users who placed pixels on (10,262) are:</p>
         <ul>
@@ -71,48 +71,48 @@
         <p>There were 628416 pixels placed on the canvas. Here are the counts for each color pixel placed:</p>
         <div class="colors-wrapper">
             <span class="white count">White: 22488</span>
-            <span class="count lightGrey">Light Grey: 20308</span>
-            <span class="count mediumGrey">Medium Grey: 15799</span>
-            <span class="count deepGrey">Deep Grey: 13864</span>
-            <span class="count darkGrey">Dark Grey: 19708</span>
-            <span class="count black">Black: 123666</span> 
-            <span class="count chocolate">Chocolate: 9669</span>
-            <span class="count brown">Brown: 8535</span>
-            <span class="count peach">Peach: 5790</span>
-            <span class="count beige">Beige: 4821</span>
-            <span class="count pink">Pink: 18566</span>
-            <span class="count magenta">Magenta: 4554</span>
-            <span class="count mauve">Mauve: 10180</span>
-            <span class="count purple">Purple: 17346</span>
-            <span class="count navy">Navy: 17594</span>
-            <span class="count blue">Blue: 58856</span>
-            <span class="count azure">Azure: 33653</span>
-            <span class="count aqua">Aqua: 12588</span>
-            <span class="count lightTeal">Light Teal: 5695</span>
-            <span class="count darkTeal">Dark Teal: 4701</span>
-            <span class="count forest">Forest: 9478</span>
-            <span class="count darkGreen">Dark Green: 19377</span>
-            <span class="count green">Green: 12612</span>
-            <span class="count lime">Lime: 5585</span>
-            <span class="count pastelYellow">Pastel Yellow: 8543</span>
-            <span class="count yellow">Yellow: 32473</span>
-            <span class="count orange">Orange: 14841</span>
-            <span class="count rust">Rust: 19064</span>
-            <span class="count maroon">Maroon: 4218</span>
-            <span class="count rose">Rose: 10948</span>
-            <span class="count red">Red: 55683</span>
-            <span class="count watermelon">Watermelon: 7213</span>
+            <span class="count  link lightGrey">Light Grey: 20308</span>
+            <span class="count  link mediumGrey">Medium Grey: 15799</span>
+            <span class="count  link deepGrey">Deep Grey: 13864</span>
+            <span class="count  link darkGrey">Dark Grey: 19708</span>
+            <span class="count  link black">Black: 123666</span> 
+            <span class="count  link chocolate">Chocolate: 9669</span>
+            <span class="count  link brown">Brown: 8535</span>
+            <span class="count  link peach">Peach: 5790</span>
+            <span class="count  link beige">Beige: 4821</span>
+            <span class="count  link pink">Pink: 18566</span>
+            <span class="count  link magenta">Magenta: 4554</span>
+            <span class="count  link mauve">Mauve: 10180</span>
+            <span class="count  link purple">Purple: 17346</span>
+            <span class="count  link navy">Navy: 17594</span>
+            <span class="count  link blue">Blue: 58856</span>
+            <span class="count  link azure">Azure: 33653</span>
+            <span class="count  link aqua">Aqua: 12588</span>
+            <span class="count  link lightTeal">Light Teal: 5695</span>
+            <span class="count  link darkTeal">Dark Teal: 4701</span>
+            <span class="count  link forest">Forest: 9478</span>
+            <span class="count  link darkGreen">Dark Green: 19377</span>
+            <span class="count  link green">Green: 12612</span>
+            <span class="count  link lime">Lime: 5585</span>
+            <span class="count  link pastelYellow">Pastel Yellow: 8543</span>
+            <span class="count  link yellow">Yellow: 32473</span>
+            <span class="count  link orange">Orange: 14841</span>
+            <span class="count  link rust">Rust: 19064</span>
+            <span class="count  link maroon">Maroon: 4218</span>
+            <span class="count  link rose">Rose: 10948</span>
+            <span class="count  link red">Red: 55683</span>
+            <span class="count  link watermelon">Watermelon: 7213</span>
         </div>
         <p>The coordinate with the most pixels placed on was (175, 171) with 170 placed. The users who placed pixels on (175, 171) are:</p>
             <ul>
-                <li>Depress_mode&#64;&#xfeff;lemmy.world: 82 times</li>
-                <li>Kalcifer&#64;&#xfeff;lemmy.world: 77 times</li>
-                <li>anonymous1691293996&#64;&#xfeff;lemmy&#46;&#xfeff;world: 4 times</li>
-                <li>anonymous1691294527&#64;&#xfeff;lemmy&#46;&#xfeff;world: 3 times</li>
-                <li>anonymous1691296202&#64;&#xfeff;lemmy&#46;&#xfeff;world: 1 time</li>
-                <li>depress_mode&#64;&#xfeff;lemmy&#46;&#xfeff;world: 1 time</li>
-                <li>bstix&#64;&#xfeff;feddit&#46;&#xfeff;dk: 1 time</li>
-                <li>Wilker&#64;&#xfeff;lemmy&#46;&#xfeff;blahaj&#46;&#xfeff;zone: 1 time</li>
+                <li>Depress_mode&#64;lemmy.world: 82 times</li>
+                <li>Kalcifer&#64;lemmy.world: 77 times</li>
+                <li>anonymous1691293996&#64;lemmy.world: 4 times</li>
+                <li>anonymous1691294527&#64;lemmy.world: 3 times</li>
+                <li>anonymous1691296202&#64;lemmy.world: 1 time</li>
+                <li>depress_mode&#64;lemmy.world: 1 time</li>
+                <li>bstix&#64;feddit.dk: 1 time</li>
+                <li>Wilker&#64;lemmy.blahaj.zone: 1 time</li>
             </ul>
     </main>
 }
