removing txt files and replacing with csv files, updating readme

--- a/angular/src/app/loading/loading.component.html
+++ b/angular/src/app/loading/loading.component.html
@@ -1,1 +1,6 @@
-<p>loading works!</p>
+<main>
+    <div id="wrapper">
+        <span class="loader"></span>
+    </div>
+<h2>Loading...</h2>
+</main>
