--- a/angular/src/app/stats-2024/stats-2024.component.html
+++ b/angular/src/app/stats-2024/stats-2024.component.html
@@ -4,55 +4,54 @@
 }
 @if (wasUserFound === false) {
     <main>
-        <p>Sorry, it looks like you didn't place any pixels during the 2024 event.</p>
-        <p>{{allRankings.length}}</p>
-        <p>{{username}}</p>
+        <p>Sorry, it looks like you didn't place any pixels during the 2024 event. You can try <a href="/users/2024">looking at the list of users for 2024</a> and see if you can find your username. If you still can't find your username and you truely believe you did participate in 2024, send me a DM <a href="https://sh.itjust.works/u/the_real_monte">&#64;the_real_monte</a> and I can check the database.</p>
     </main>
 }
 @if (showResults) {
     <main>
-        <h2>Hello, {{userRanking.userName}}!</h2>
-        <p>Your ranking: {{userRanking.ranking}} out of 1972 users.</p>
-        <p>The coordinate you placed the most pixels on was {{topCord.topCord}} - {{topCord.count}} times.</p>
-        <p>You placed {{userRanking.pixelCount}} pixels throughout the event! Here is how many of each color you placed:</p>
+        <h2>Hello, {{user.username}}!</h2>
+        <p>Your ranking: {{user.userRank}} out of 1972 users.</p>
+        <p>The coordinate you placed the most pixels on was ({{user.xCord}}, {{user.yCord}}) - {{user.cordCount}} times.</p>
+        <p>You placed {{user.pixelCount}} pixels throughout the event! Here is how many of each color you placed:</p>
         <div class="colors-wrapper">
-            <span class="white count">White: {{userColorCount.colors.White}}</span>
-            <span class="count lightGrey">Light Grey: {{userColorCount.colors.LightGrey}}</span>
-            <span class="count mediumGrey">Medium Grey: {{userColorCount.colors.MediumGrey}}</span>
-            <span class="count deepGrey">Deep Grey: {{userColorCount.colors.DeepGrey}}</span>
-            <span class="count darkGrey">Dark Grey: {{userColorCount.colors.DarkGrey}}</span>
-            <span class="count black">Black: {{userColorCount.colors.Black}}</span>
-            <span class="count darkChocolate">Dark Chocolate: {{userColorCount.colors.DarkChocolate}}</span>
-            <span class="count chocolate">Chocolate: {{userColorCount.colors.Chocolate}}</span>
-            <span class="count brown">Brown: {{userColorCount.colors.Brown}}</span>
-            <span class="count peach">Peach: {{userColorCount.colors.Peach}}</span>
-            <span class="count beige">Beige: {{userColorCount.colors.Beige}}</span>
-            <span class="count pink">Pink: {{userColorCount.colors.Pink}}</span>
-            <span class="count magenta">Magenta: {{userColorCount.colors.Magenta}}</span>
-            <span class="count mauve">Mauve: {{userColorCount.colors.Mauve}}</span>
-            <span class="count purple">Purple: {{userColorCount.colors.Purple}}</span>
-            <span class="count darkPurple">Dark Purple: {{userColorCount.colors.DarkPurple}}</span>
-            <span class="count navy">Navy: {{userColorCount.colors.Navy}}</span>
-            <span class="count blue">Blue: {{userColorCount.colors.Blue}}</span>
-            <span class="count azure">Azure: {{userColorCount.colors.Azure}}</span>
-            <span class="count aqua">Aqua: {{userColorCount.colors.Aqua}}</span>
-            <span class="count lightTeal">Light Teal: {{userColorCount.colors.LightTeal}}</span>
-            <span class="count darkTeal">Dark Teal: {{userColorCount.colors.DarkTeal}}</span>
-            <span class="count forest">Forest: {{userColorCount.colors.Forest}}</span>
-            <span class="count darkGreen">Dark Green: {{userColorCount.colors.DarkGreen}}</span>
-            <span class="count green">Green: {{userColorCount.colors.Green}}</span>
-            <span class="count lime">Lime: {{userColorCount.colors.Lime}}</span>
-            <span class="count pastelYellow">Pastel Yellow: {{userColorCount.colors.PastelYellow}}</span>
-            <span class="count yellow">Yellow: {{userColorCount.colors.Yellow}}</span>
-            <span class="count orange">Orange: {{userColorCount.colors.Orange}}</span>
-            <span class="count rust">Rust: {{userColorCount.colors.Rust}}</span>
-            <span class="count maroon">Maroon: {{userColorCount.colors.Maroon}}</span>
-            <span class="count rose">Rose: {{userColorCount.colors.Rose}}</span>
-            <span class="count red">Red: {{userColorCount.colors.Red}}</span>
-            <span class="count watermelon">Watermelon: {{userColorCount.colors.Watermelon}}</span>
+            <span class="white count">White: {{userColors.white}}</span>
+            <span class="count lightGrey">Light Grey: {{userColors.lightGrey}}</span>
+            <span class="count mediumGrey">Medium Grey: {{userColors.mediumGrey}}</span>
+            <span class="count deepGrey">Deep Grey: {{userColors.deepGrey}}</span>
+            <span class="count darkGrey">Dark Grey: {{userColors.darkGrey}}</span>
+            <span class="count black">Black: {{userColors.black}}</span>
+            <span class="count darkChocolate">Dark Chocolate: {{userColors.darkChocolate}}</span>
+            <span class="count chocolate">Chocolate: {{userColors.chocolate}}</span>
+            <span class="count brown">Brown: {{userColors.brown}}</span>
+            <span class="count peach">Peach: {{userColors.peach}}</span>
+            <span class="count beige">Beige: {{userColors.beige}}</span>
+            <span class="count pink">Pink: {{userColors.pink}}</span>
+            <span class="count magenta">Magenta: {{userColors.magenta}}</span>
+            <span class="count mauve">Mauve: {{userColors.mauve}}</span>
+            <span class="count purple">Purple: {{userColors.purple}}</span>
+            <span class="count darkPurple">Dark Purple: {{userColors.darkPurple}}</span>
+            <span class="count navy">Navy: {{userColors.navy}}</span>
+            <span class="count blue">Blue: {{userColors.blue}}</span>
+            <span class="count azure">Azure: {{userColors.azure}}</span>
+            <span class="count aqua">Aqua: {{userColors.aqua}}</span>
+            <span class="count lightTeal">Light Teal: {{userColors.lightTeal}}</span>
+            <span class="count darkTeal">Dark Teal: {{userColors.darkTeal}}</span>
+            <span class="count forest">Forest: {{userColors.forest}}</span>
+            <span class="count darkGreen">Dark Green: {{userColors.darkGreen}}</span>
+            <span class="count green">Green: {{userColors.green}}</span>
+            <span class="count lime">Lime: {{userColors.lime}}</span>
+            <span class="count pastelYellow">Pastel Yellow: {{userColors.pastelYellow}}</span>
+            <span class="count yellow">Yellow: {{userColors.yellow}}</span>
+            <span class="count orange">Orange: {{userColors.orange}}</span>
+            <span class="count rust">Rust: {{userColors.rust}}</span>
+            <span class="count maroon">Maroon: {{userColors.maroon}}</span>
+            <span class="count rose">Rose: {{userColors.rose}}</span>
+            <span class="count red">Red: {{userColors.red}}</span>
+            <span class="count watermelon">Watermelon: {{userColors.watermelon}}</span>
         </div>
         <section class="btn-wrapper">
             <button (click)="sendUserToDraw()" class="btn darkGreen">Click here to see the pixels you placed</button>
+            <button (click)="sendUserTo2023Stats()" class="btn blue">See your 2023 Stats</button>
         </section>
     </main>
     }
