removing color img, still more work on app

--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -5,6 +5,7 @@
 </div>
 <button (click)="changeYear(2023)">View 2023 Stats</button>
 <button (click)="changeYear(2024)">View 2024 Stats</button>
+<button (click)="seeAllUser()">All Users</button>
 @if (errorAlert.length > 0) {
     <p class="error-box">{{errorAlert}}</p>
 }
