--- a/angular/src/app/draw-color/draw-color.component.html
+++ b/angular/src/app/draw-color/draw-color.component.html
@@ -1,8 +1,5 @@
-<app-navbar />
+<app-navbar [year]="2024" />
 <main>
-    <a href="/" class="btn blue"><span class="material-symbols-outlined">
-        arrow_back
-        </span>Back</a>
     <p>Here are all of the {{colorName}} pixels drawn durning the 2024 event.</p>
     <div class="img-wrapper">
         <img [src]="imgSRC" [alt]="colorName"/>
