--- a/angular/src/app/draw/draw.component.css
+++ b/angular/src/app/draw/draw.component.css
@@ -1,12 +1,3 @@
-main {
-    width: 1040px;
-    margin: 10px auto;
-    padding: 20px;
-    background-color: white;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    border-radius: 5px;
-}
-
 #myCanvas {
     display: block;
     width: 1000px;
@@ -15,38 +6,25 @@ main {
     border: 1px solid black;
     margin: 5px auto;
 }
-.responsive-warning {
-    display: none;
+
+#main-canvas {
+    width: 1020px !important;
+    margin: 10px auto;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    padding: 5px 20px;
+    border-radius: 5px;
+    background-color: white;
 }
 
-.btn {
-    border-radius: 10px;
-    border: 0;
-    text-decoration: none;
-    margin: 20px;
-    padding: 8px;
-    text-align: center;
-    box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
-    font-size: 20px;
-    background-color: #0334BF;
-    color: white;
+.responsive-warning {
+    display: none;
 }
 
 button {
     cursor: pointer;
 }
 
-.blue {
-    background-color: #0334BF;
-}
-.green {
-    background-color: #18862F;
-}
-
-.btn:active {
-    box-shadow: 0 0 #ffffff;
-    transform: translateY(4px);
-}
 .material-symbols-outlined {
     vertical-align: middle;
 }
