--- a/angular/src/app/navbar/navbar.component.html
+++ b/angular/src/app/navbar/navbar.component.html
@@ -1,6 +1,25 @@
-<div class="links-wrapper">
+<header>
+    <a href="/">
+        <div id="logo">
+            <div class="logo-square back"></div>
+            <div class="logo-square front"></div>
+        </div>
+    </a>
+    <a href="/" class="logo-link"><h1>Canvas Stats</h1></a>
+        
+    
+</header>
+<nav class="purple">
+    <a href="/">Home</a>
     <a href="https://fediverse.events/">fediverse.events</a>
     <a href="https://matrix.to/#/#lemmy-canvas:matrix.org">Matrix Space</a>
     <a href="https://discord.gg/mEUqXZw8kR">Discord Server (bridged to matrix)</a>
     <a href="https://toast.ooo/c/canvas">Lemmy</a>
-</div>
+</nav>
+@if (showSearch) {
+    <div class="search-wrapper">
+        <input [(ngModel)]="searchString" [value]="username" type="text" placeholder="Enter Username Ex: grant@toast.ooo" class="Search-input" (keydown.enter)="onSubmit()"/>
+        <button (click)="onSubmit()" class="btn green">Search</button>
+        <button (click)="seeAllUser()" class="btn blue">All Users</button>
+    </div>
+}
