--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -37,7 +37,6 @@ h2 {
     text-align: center;
     box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
     font-size: 20px;
-    height: 40px;
 }
 
 .btn:active {
@@ -51,6 +50,8 @@ h2 {
 }
 .link {
     cursor: pointer;
+    text-decoration: underline;
+    color: #5C1D8B;
 }
 .lightGrey {
     background-color: #b9c3cf;
@@ -183,4 +184,10 @@ h2 {
 .watermelon {
     background-color: #ff7872;
     color: black;
+}
+
+@media only screen and (min-width: 611px) {
+    .btn {
+        height: 40px;
+    }
 }
