redeploying to add delete stats

--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -13,40 +13,40 @@
         the canvas 81.7762% covered at the end of the event. Here are the counts for each color pixel placed, click on
         the color to view all of the pixels of that color:</p>
     <div class="colors-wrapper">
-        <span class="white count link" (click)="showColorIMG('white')">White: 55152</span>
-        <span class="count link lightGrey" (click)="showColorIMG('light-grey')">Light Grey: 20011</span>
-        <span class="count link mediumGrey" (click)="showColorIMG('medium-grey')">Medium Grey: 13057</span>
-        <span class="count link deepGrey" (click)="showColorIMG('deep-grey')">Deep Grey: 12730</span>
-        <span class="count link darkGrey" (click)="showColorIMG('dark-grey')">Dark Grey: 12810</span>
-        <span class="count link black" (click)="showColorIMG('black')">Black: 119468</span>
-        <span class="count link darkChocolate" (click)="showColorIMG('dark-chocolate')">Dark Chocolate: 5388</span>
-        <span class="count link chocolate" (click)="showColorIMG('chocolate')">Chocolate: 8724</span>
-        <span class="count link brown" (click)="showColorIMG('brown')">Brown: 6996</span>
-        <span class="count link peach" (click)="showColorIMG('peach')">Peach: 4138</span>
-        <span class="count link beige" (click)="showColorIMG('beige')">Beige: 8040</span>
-        <span class="count link pink" (click)="showColorIMG('pink')">Pink: 23204</span>
-        <span class="count link magenta" (click)="showColorIMG('magenta')">Magenta: 8536</span>
-        <span class="count link mauve" (click)="showColorIMG('mauve')">Mauve: 6421</span>
-        <span class="count link purple" (click)="showColorIMG('purple')">Purple: 12185</span>
-        <span class="count link darkPurple" (click)="showColorIMG('dark-purple')">Dark Purple: 10896</span>
-        <span class="count link navy" (click)="showColorIMG('navy')">Navy: 27663</span>
-        <span class="count link blue" (click)="showColorIMG('blue')">Blue: 34210</span>
-        <span class="count link azure" (click)="showColorIMG('azure')">Azure: 32045</span>
-        <span class="count link aqua" (click)="showColorIMG('aqua')">Aqua: 28753</span>
-        <span class="count link lightTeal" (click)="showColorIMG('light-teal')">Light Teal: 5153</span>
-        <span class="count link darkTeal" (click)="showColorIMG('dark-teal')">Dark Teal: 5216</span>
-        <span class="count link forest" (click)="showColorIMG('forest')">Forest: 5975</span>
-        <span class="count link darkGreen" (click)="showColorIMG('dark-green')">Dark Green: 12810</span>
-        <span class="count link green" (click)="showColorIMG('green')">Green: 15535</span>
-        <span class="count link lime" (click)="showColorIMG('lime')">Lime: 4168</span>
-        <span class="count link pastelYellow" (click)="showColorIMG('pastel-yellow')">Pastel Yellow: 12417</span>
-        <span class="count link yellow" (click)="showColorIMG('yellow')">Yellow: 35911</span>
-        <span class="count link orange" (click)="showColorIMG('orange')">Orange: 12336</span>
-        <span class="count link rust" (click)="showColorIMG('rust')">Rust: 7950</span>
-        <span class="count link maroon" (click)="showColorIMG('maroon')">Maroon: 4887</span>
-        <span class="count link rose" (click)="showColorIMG('rose')">Rose: 8750</span>
-        <span class="count link red" (click)="showColorIMG('red')">Red: 54053</span>
-        <span class="count link watermelon" (click)="showColorIMG('watermelon')">Watermelon: 3711</span>
+        <span class="white count color-link" (click)="showColorIMG('white')">White: 55152</span>
+        <span class="count color-link lightGrey" (click)="showColorIMG('light-grey')">Light Grey: 20011</span>
+        <span class="count color-link mediumGrey" (click)="showColorIMG('medium-grey')">Medium Grey: 13057</span>
+        <span class="count color-link deepGrey" (click)="showColorIMG('deep-grey')">Deep Grey: 12730</span>
+        <span class="count color-link darkGrey" (click)="showColorIMG('dark-grey')">Dark Grey: 12810</span>
+        <span class="count color-link black" (click)="showColorIMG('black')">Black: 119468</span>
+        <span class="count color-link darkChocolate" (click)="showColorIMG('dark-chocolate')">Dark Chocolate: 5388</span>
+        <span class="count color-link chocolate" (click)="showColorIMG('chocolate')">Chocolate: 8724</span>
+        <span class="count color-link brown" (click)="showColorIMG('brown')">Brown: 6996</span>
+        <span class="count color-link peach" (click)="showColorIMG('peach')">Peach: 4138</span>
+        <span class="count color-link beige" (click)="showColorIMG('beige')">Beige: 8040</span>
+        <span class="count color-link pink" (click)="showColorIMG('pink')">Pink: 23204</span>
+        <span class="count color-link magenta" (click)="showColorIMG('magenta')">Magenta: 8536</span>
+        <span class="count color-link mauve" (click)="showColorIMG('mauve')">Mauve: 6421</span>
+        <span class="count color-link purple" (click)="showColorIMG('purple')">Purple: 12185</span>
+        <span class="count color-link darkPurple" (click)="showColorIMG('dark-purple')">Dark Purple: 10896</span>
+        <span class="count color-link navy" (click)="showColorIMG('navy')">Navy: 27663</span>
+        <span class="count color-link blue" (click)="showColorIMG('blue')">Blue: 34210</span>
+        <span class="count color-link azure" (click)="showColorIMG('azure')">Azure: 32045</span>
+        <span class="count color-link aqua" (click)="showColorIMG('aqua')">Aqua: 28753</span>
+        <span class="count color-link lightTeal" (click)="showColorIMG('light-teal')">Light Teal: 5153</span>
+        <span class="count color-link darkTeal" (click)="showColorIMG('dark-teal')">Dark Teal: 5216</span>
+        <span class="count color-link forest" (click)="showColorIMG('forest')">Forest: 5975</span>
+        <span class="count color-link darkGreen" (click)="showColorIMG('dark-green')">Dark Green: 12810</span>
+        <span class="count color-link green" (click)="showColorIMG('green')">Green: 15535</span>
+        <span class="count color-link lime" (click)="showColorIMG('lime')">Lime: 4168</span>
+        <span class="count color-link pastelYellow" (click)="showColorIMG('pastel-yellow')">Pastel Yellow: 12417</span>
+        <span class="count color-link yellow" (click)="showColorIMG('yellow')">Yellow: 35911</span>
+        <span class="count color-link orange" (click)="showColorIMG('orange')">Orange: 12336</span>
+        <span class="count color-link rust" (click)="showColorIMG('rust')">Rust: 7950</span>
+        <span class="count color-link maroon" (click)="showColorIMG('maroon')">Maroon: 4887</span>
+        <span class="count color-link rose" (click)="showColorIMG('rose')">Rose: 8750</span>
+        <span class="count color-link red" (click)="showColorIMG('red')">Red: 54053</span>
+        <span class="count color-link watermelon" (click)="showColorIMG('watermelon')">Watermelon: 3711</span>
     </div>
     <p>The coordinate with the most pixels placed on was (10,262) with 1427 placed. The users who placed pixels on
         (10,262) are:</p>
@@ -60,6 +60,7 @@
         <li>EXtremeExploit&#64;lemmy.world: 1 time</li>
         <li>hdggDalton&#64;toast.ooo: 1 time</li>
     </ul>
+    <p>1101 users deleted a total of 15724 pixels. 13 users deleted all of their pixels.</p>
     }
     @if (showYear === 2023) {
     <p>2277 users from 132 instances participated in the event in 2023.</p>
@@ -110,6 +111,7 @@
         <li>bstix&#64;feddit.dk: 1 time</li>
         <li>Wilker&#64;lemmy.blahaj.zone: 1 time</li>
     </ul>
+    <p>1070 users deleted a total of 10715 pixels.</p>
     }
 </main>
 
