--- a/angular/src/app/stats-2023/stats-2023.component.html
+++ b/angular/src/app/stats-2023/stats-2023.component.html
@@ -10,7 +10,7 @@
         }
         @if (wasUserFound) {
             <main>
-                <h2>Hello, {{user.username}}!</h2>
+                <h2>Hello, {{user.username}}! Here is how you did in 2023</h2>
                 <p>Your ranking: {{user.userRank}} out of 1972 users.</p>
                 <p>The coordinate you placed the most pixels on was ({{user.xCord}}, {{user.yCord}}) - {{user.cordCount}} times.</p>
                 <p>You placed {{user.pixelCount}} pixels throughout the event! Here is how many of each color you placed:</p>
